some html basics

--- a/index.html
+++ b/index.html
@@ -7,6 +7,43 @@
 
     <body>
         <h2>Here is some text</h2>
+        <hr>
+        <p>Here are some links</p>
+        <table cellspacing="5">
+            <tr>
+                <td><h5><a href="https://google.com"> Google </a> </h5></td>
+                <td><h5><a href="https://yahoo.com"> Yahoo </a> </h5></td>
+                <td><h5><a href="https://youtube.com"> Youtube </a> </h5></td>
+            </tr>
+        </table>
+
+
+        <table border="0" cellpadding="5" cellspacing="1">
+            <tr>
+                <td>
+                    <button>
+                        A Page
+                    </button>
+                </td>
+                <td>
+                    <button>
+                        Another Page
+                    </button>
+                </td>
+            </tr>
+        </table>
+
+        <h3>Contact Us</h3>
+        <form>
+            First Name: <br>
+            <input type="text"> <br>
+            Last Name: <br>
+            <input type="text"> <br>
+            Email: <br>
+            <input type="text"> <br> <br>
+            <input type="SUBMIT">
+        </form>
+
     </body>
 
 </html>
