basic navbar and css

--- a/index.html
+++ b/index.html
@@ -3,35 +3,26 @@
 
     <head>
         <title>My test website</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-        <h2>Here is some text</h2>
+        <nav>
+            <ul class="top-nav">
+               <li><a href="#home"> Home </a> </li>
+                <li><a href="#contact"> Contact </a> </li>
+                <li><a href="#about"> About </a> </li>
+                <li class="top-nav-right"><a href="#signup"> Sign Up </a> </li>
+                <li class="top-nav-right"><a href="#signin"> Sign In </a> </li>
+            </ul>
+        </nav>
+
+        <h2>Welcome!</h2>
         <hr>
-        <p>Here are some links</p>
-        <table cellspacing="5">
-            <tr>
-                <td><h5><a href="https://google.com"> Google </a> </h5></td>
-                <td><h5><a href="https://yahoo.com"> Yahoo </a> </h5></td>
-                <td><h5><a href="https://youtube.com"> Youtube </a> </h5></td>
-            </tr>
-        </table>
 
-
-        <table border="0" cellpadding="5" cellspacing="1">
-            <tr>
-                <td>
-                    <button>
-                        A Page
-                    </button>
-                </td>
-                <td>
-                    <button>
-                        Another Page
-                    </button>
-                </td>
-            </tr>
-        </table>
+        <p>
+            Here is some text!
+        </p>
 
         <h3>Contact Us</h3>
         <form>
