--- a/index.html
+++ b/index.html
@@ -18,23 +18,51 @@
             </ul>
         </nav>
 
-        <h2>Welcome!</h2>
-        <hr>
 
-        <p>
-            Here is some text!
-        </p>
+        <div class="container" id="section-1-gradient">
+            <div class="row">
+                <div class="col-6">
+                    <div>
+                        <h1 class="large">Home Page</h1>
+                        <h1 class="large">For my first full-stack</h1>
+                    </div>
+                </div>
+                <form>
+                    <div>
+                        Username: <br>
+                        <input class="inputbox" type="text" placeholder="Username"> <br>
+                        Password: <br>
+                        <input class="inputbox" type="password" placeholder="Password"> <br>
+                    </div>
+                </form>
+                <div class="col-6">
 
-        <h3>Contact Us</h3>
-        <form>
-            First Name: <br>
-            <input type="text"> <br>
-            Last Name: <br>
-            <input type="text"> <br>
-            Email: <br>
-            <input type="text"> <br> <br>
-            <input type="SUBMIT">
-        </form>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <article>
+                <p>
+                    This is my home page for my first full stack site. <br>
+                    Feel free to sign up!
+                </p>
+            </article>
+        </div>
+
+        <footer class="footerStyle">
+            <div class="row">
+                <div class="col-3">
+                    <h1>Site Map</h1>
+                    <ul>
+                        <li>About</li>
+                        <li>Contact</li>
+                        <li>Sign Up</li>
+                        <li>Sign In</li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
 
     </body>
 
